--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/730cf48073.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
@@ -28,6 +32,7 @@
     <div class="d-flex bg-warning">
       <h1>Hello World!!!</h1>
       <p>Hi there</p>
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
