--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World!!!</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>👋 Hi, I am</p>
+      <h1>Nadiia Lashtun</h1>
+      <h2 class="mb-5">Front-end developer from Ukraine💛💙</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
