--- a/index.html
+++ b/index.html
@@ -35,5 +35,69 @@
       <h2 class="mb-5">Front-end developer from Ukraine💛💙</h2>
       <a href="#" class="btn btn-branding">Contact me</a>
     </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img class="img-fluent" src="images/Salsa.png" alt="Salsa project" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Salsa Project</h2>
+            <p class="mb-4">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a class="btn btn-branding-second" href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Coding Project</h2>
+            <p class="mb-4">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a class="btn btn-branding-second" href="#">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluent"
+            src="images/Coding.png"
+            alt="Coding project"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluent"
+            src="images/Weather.png"
+            alt="Weather project"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather Project</h2>
+            <p class="mb-4">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a class="btn btn-branding-second" href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
