--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/"
+          ><img
+            class="logo d-none d-md-flex"
+            src="images/logo.png"
+            alt="Logo picture"
+        /></a>
+        <a href="/"
+          ><img
+            class="logo d-flex d-md-none"
+            src="images/logo_small.png"
+            alt="Logo picture"
+        /></a>
+        <ul>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hi, I am</p>
       <h1>Nadiia Lashtun</h1>
