--- a/index.html
+++ b/index.html
@@ -120,6 +120,35 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box mb-5 d-none d-md-flex justify-content-between">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted m-0">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding">Contact me</a>
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center mb-5">
+          <a class="link-mail" href="mailto:nadezhda.lashtun@gmail.com">
+            nadezhda.lashtun@gmail.com
+          </a>
+        </div>
+
+        <div class="link-social text-center">
+          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/flor.smile/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://t.me/nlashtun" target="_blank"
+            ><i class="fa-brands fa-telegram"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
