--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Nadiia Lashtun is a front-end developer from Ukraine💛💙"
+    />
+    <title>Front-end developer - Nadiia Lashtun</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,19 +39,21 @@
           ><img
             class="logo d-none d-md-flex"
             src="images/logo.png"
-            alt="Logo picture"
+            alt="Nadiia Logo"
+            title="Homepage"
         /></a>
         <a href="/"
           ><img
             class="logo d-flex d-md-none"
             src="images/logo_small.png"
-            alt="Logo picture"
+            alt="Nadiia Logo"
+            title="Homepage"
         /></a>
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/work.html" title="Nadiia's work">Work</a></li>
+          <li><a href="/about.html" title="About Nadiia">About</a></li>
+          <li><a href="/contact.html" title="Contact Nadiia">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -55,7 +61,9 @@
       <p>👋 Hi, I am</p>
       <h1>Nadiia Lashtun</h1>
       <h2 class="mb-5">Front-end developer from Ukraine💛💙</h2>
-      <a href="about.html" class="btn btn-branding">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact Nadiia"
+        >Contact me</a
+      >
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -74,7 +82,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a class="btn btn-branding-second" href="#">Learn more</a>
+            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
           </div>
         </div>
       </div>
@@ -88,7 +96,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a class="btn btn-branding-second" href="#">Learn more</a>
+            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -116,7 +124,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a class="btn btn-branding-second" href="#">Learn more</a>
+            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
           </div>
         </div>
       </div>
@@ -127,27 +135,51 @@
             <p class="text-muted m-0">Let's work together</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-branding">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding"
+              title="Contact Nadiia"
+              >Contact me</a
+            >
           </div>
         </div>
 
         <div class="d-flex justify-content-center mb-5">
-          <a class="link-mail" href="mailto:nadezhda.lashtun@gmail.com">
+          <a
+            class="link-mail"
+            href="mailto:nadezhda.lashtun@gmail.com"
+            title="Mail to Nadiia"
+          >
             nadezhda.lashtun@gmail.com
           </a>
         </div>
 
         <div class="link-social text-center">
-          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
+          <a
+            href="https://github.com/FlorSmile/Portfolio"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/flor.smile/" target="_blank"
+          <a
+            href="https://www.instagram.com/flor.smile/"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://t.me/nlashtun" target="_blank"
+          <a
+            href="https://t.me/nlashtun"
+            target="_blank"
+            title="Telegram Profile"
             ><i class="fa-brands fa-telegram"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌️ This website was coded by Patricia Pereira, and is
+          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
