--- a/contact.html
+++ b/contact.html
@@ -34,30 +34,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="d-flex justify-content-between">
-        <a href="/"
-          ><img
-            class="logo d-none d-md-flex"
-            src="images/logo.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <a href="/"
-          ><img
-            class="logo d-flex d-md-none"
-            src="images/logo_small.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <ul>
-          <li><a href="/" title="Homepage">Home</a></li>
-          <li><a href="/work.html" title="Nadiia's work">Work</a></li>
-          <li><a href="/about.html" title="About Nadiia">About</a></li>
-          <li class="active">
-            <a href="/contact.html" title="Contact Nadiia">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      <nav class="d-flex justify-content-between"></nav>
     </div>
     <div class="content-container container">
       <div class="content">
@@ -79,59 +56,8 @@
           <a href="https://t.me/nlashtun" target="_blank"> @nlashtun </a>
         </p>
       </div>
-      <footer>
-        <div class="contact-box mb-5 d-none d-md-flex justify-content-between">
-          <div>
-            <h3>Work Inquiry</h3>
-            <p class="text-muted m-0">Let's work together</p>
-          </div>
-          <div>
-            <a
-              href="/contact.html"
-              class="btn btn-branding"
-              title="Contact Nadiia"
-              >Contact me</a
-            >
-          </div>
-        </div>
-
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            class="link-mail"
-            href="mailto:nadezhda.lashtun@gmail.com"
-            title="Mail to Nadiia"
-          >
-            nadezhda.lashtun@gmail.com
-          </a>
-        </div>
-
-        <div class="link-social text-center">
-          <a
-            href="https://github.com/FlorSmile/Portfolio"
-            target="_blank"
-            title="GitHub Profile"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/flor.smile/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a
-            href="https://t.me/nlashtun"
-            target="_blank"
-            title="Telegram Profile"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
-        </div>
-        <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
-          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
-            >open-sourced</a
-          >
-        </p>
-      </footer>
+      <footer></footer>
     </div>
+    <script src="/src/app.js"></script>
   </body>
 </html>
