--- a/index.html
+++ b/index.html
@@ -34,28 +34,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="d-flex justify-content-between">
-        <a href="/"
-          ><img
-            class="logo d-none d-md-flex"
-            src="images/logo.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <a href="/"
-          ><img
-            class="logo d-flex d-md-none"
-            src="images/logo_small.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <ul>
-          <li class="active"><a href="/" title="Homepage">Home</a></li>
-          <li><a href="/work.html" title="Nadiia's work">Work</a></li>
-          <li><a href="/about.html" title="About Nadiia">About</a></li>
-          <li><a href="/contact.html" title="Contact Nadiia">Contact</a></li>
-        </ul>
-      </nav>
+      <nav class="d-flex justify-content-between"></nav>
     </div>
     <div class="hero">
       <p>👋 Hi, I am</p>
@@ -82,39 +61,13 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
+            <a class="btn btn-branding-second" href="/work.html#dance-project"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
       <div class="row mb-4">
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Coding Project</h2>
-            <p class="mb-4">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
-          </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
-            class="img-fluent"
-            src="images/Coding.png"
-            alt="Coding project"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col d-none d-lg-block">
-          <img
-            class="img-fluent"
-            src="images/Weather.png"
-            alt="Weather project"
-          />
-        </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather Project</h2>
@@ -124,63 +77,21 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a class="btn btn-branding-second" href="/work.html">Learn more</a>
-          </div>
-        </div>
-      </div>
-      <footer>
-        <div class="contact-box mb-5 d-none d-md-flex justify-content-between">
-          <div>
-            <h3>Work Inquiry</h3>
-            <p class="text-muted m-0">Let's work together</p>
-          </div>
-          <div>
-            <a
-              href="/contact.html"
-              class="btn btn-branding"
-              title="Contact Nadiia"
-              >Contact me</a
+            <a class="btn btn-branding-second" href="/work.html#weather-project"
+              >Learn more</a
             >
           </div>
         </div>
-
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            class="link-mail"
-            href="mailto:nadezhda.lashtun@gmail.com"
-            title="Mail to Nadiia"
-          >
-            nadezhda.lashtun@gmail.com
-          </a>
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluent"
+            src="images/Weather.png"
+            alt="Weather project"
+          />
         </div>
-
-        <div class="link-social text-center">
-          <a
-            href="https://github.com/FlorSmile/Portfolio"
-            target="_blank"
-            title="GitHub Profile"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/flor.smile/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a
-            href="https://t.me/nlashtun"
-            target="_blank"
-            title="Telegram Profile"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
-        </div>
-        <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
-          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
-            >open-sourced</a
-          >
-        </p>
-      </footer>
+      </div>
+      <footer></footer>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
