--- a/work.html
+++ b/work.html
@@ -63,92 +63,43 @@
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
-          <div class="col-md-6 mb-4">
-            <img
-              class="img-fluid mb-3 rounded"
-              src="images/Salsa.png"
-              alt="Salsa project"
-            />
-            <h3 class="text-center mb-0">Salsa Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+          <div class="col-md-6 mb-4 btn-project" id="dance-project">
+            <a
+              href="https://flourishing-otter-eb08a2.netlify.app/"
+              target="_blank"
+              title="Show Dance project"
+            >
+              <img
+                class="img-fluid mb-3 rounded"
+                src="images/Salsa.png"
+                alt="Salsa project"
+              />
+              <h3 class="text-center mb-0">Salsa Project</h3>
+              <p class="text-center text-muted">Built with HTML and CSS</p>
+            </a>
           </div>
-          <div class="col-md-6 mb-4">
-            <img
-              class="img-fluid mb-3 rounded"
-              src="images/Coding.png"
-              alt="Coding project"
-            />
-            <h3 class="text-center mb-0">Coding Project</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
-            </p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img
-              class="img-fluid mb-3 rounded"
-              src="images/Weather.png"
-              alt="Weather project"
-            />
-            <h3 class="text-center mb-0">Weather Project</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
-            </p>
+
+          <div class="col-md-6 mb-4 btn-project" id="weather-project">
+            <a
+              href="https://resonant-salmiakki-074917.netlify.app/"
+              target="_blank"
+              title="Show Weather project"
+            >
+              <img
+                class="img-fluid mb-3 rounded"
+                src="images/Weather.png"
+                alt="Weather project"
+              />
+              <h3 class="text-center mb-0">Weather Project</h3>
+              <p class="text-center text-muted">
+                Built with HTML, CSS and JavaScript
+              </p>
+            </a>
           </div>
         </div>
       </div>
-      <footer>
-        <div class="contact-box mb-5 d-none d-md-flex justify-content-between">
-          <div>
-            <h3>Work Inquiry</h3>
-            <p class="text-muted m-0">Let's work together</p>
-          </div>
-          <div>
-            <a
-              href="/contact.html"
-              class="btn btn-branding"
-              title="Contact Nadiia"
-              >Contact me</a
-            >
-          </div>
-        </div>
-
-        <div class="d-flex justify-content-center mb-5">
-          <a
-            class="link-mail"
-            href="mailto:nadezhda.lashtun@gmail.com"
-            title="Mail to Nadiia"
-          >
-            nadezhda.lashtun@gmail.com
-          </a>
-        </div>
-
-        <div class="link-social text-center">
-          <a
-            href="https://github.com/FlorSmile/Portfolio"
-            target="_blank"
-            title="GitHub Profile"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/flor.smile/"
-            target="_blank"
-            title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a
-            href="https://t.me/nlashtun"
-            target="_blank"
-            title="Telegram Profile"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
-        </div>
-        <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
-          <a href="https://github.com/FlorSmile/Portfolio" target="_blank"
-            >open-sourced</a
-          >
-        </p>
-      </footer>
+      <footer></footer>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
