--- a/work.html
+++ b/work.html
@@ -34,30 +34,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="d-flex justify-content-between">
-        <a href="/"
-          ><img
-            class="logo d-none d-md-flex"
-            src="images/logo.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <a href="/"
-          ><img
-            class="logo d-flex d-md-none"
-            src="images/logo_small.png"
-            alt="Nadiia Logo"
-            title="Homepage"
-        /></a>
-        <ul>
-          <li><a href="/" title="Homepage">Home</a></li>
-          <li class="active">
-            <a href="/work.html" title="Nadiia's work">Work</a>
-          </li>
-          <li><a href="/about.html" title="About Nadiia">About</a></li>
-          <li><a href="/contact.html" title="Contact Nadiia">Contact</a></li>
-        </ul>
-      </nav>
+      <nav class="d-flex justify-content-between"></nav>
     </div>
     <div class="content-container container">
       <div class="content">
